src/objects/Remove_Invocation__e.object
<CustomObject>
    <fields>
        <fullName>EventType__c</fullName>
        <label>EventType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Remove Invocation</label>
    <pluralLabel>Remove Invocations</pluralLabel>
</CustomObject>